Close to getting turns working